ocp/elements/result/result-gatoperro-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: null
  labels:
    app: result
  name: result
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 4000
  selector:
    deploymentconfig: result
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
