ocp/elements/result/result-gatoperro-route.yml
apiVersion: v1
kind: Route
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
    openshift.io/host.generated: "true"
  creationTimestamp: null
  labels:
    app: result
  name: result
spec:
  to:
    kind: Service
    name: result
